--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -42,7 +42,7 @@ jobs:
       - name: Deploy
         uses: carlrygart/portainer-stack-deploy@v1
         with:
-          endpoint: ${{ secrets.PORTAINER_HOST }}
+          portainer-host: ${{ secrets.PORTAINER_HOST }}
           username: ${{ secrets.PORTAINER_USERNAME }}
           password: ${{ secrets.PORTAINER_PASSWORD }}
           stack-name: mystickcounter
