--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -46,5 +46,5 @@ jobs:
           username: ${{ secrets.PORTAINER_USERNAME }}
           password: ${{ secrets.PORTAINER_PASSWORD }}
           stack-name: mystickcounter
-          stack-definition: docker-compose.yml
+          stack-definition: ${{ github.workspace }}/docker-compose.yml
           image: maxsurm/mystickcounter:${{ env.VERSION }}
